[package]
name = "solana-measure"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-measure"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.11"
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
